# M1

./: .gitignore  README.md  config.yaml  configuration.yaml  pyproject.toml  requirements-optional.txt  requirements.txt
backend/: __init__.py  config.py  main.py
backend/api/: __init__.py  routes_asr.py  routes_chips.py  routes_compose.py  routes_extract.py  routes_facts.py  routes_metrics.py  routes_planpack.py
backend/db/: models.py  repo.py  schema.sql
backend/planpacks/: chest_pain.yaml  seizure.yaml  sepis.yaml
backend/rules/: ontology.json  regex_en.py
backend/services/: asr_service.py  audit_metrics.py  chips_engine.py  compose_service.py  evidence_service  extract_service  facts_service.py  llm_wrapper.py  planpack_service.py  vad_silero.py
backend/templates/: discharge_en.md.j2  discharge_es.md.j2  handoff_ipass.json.j2  note_soap_mdm.md.j2
config/: config.yaml  logging.yaml
data/: m1_cache.db
demo/: patient_bundle.json
docs/: CHANGELOG.md  FHIR_SLICE.md  MODEL.md  RFP.md  RUNBOOK.md  SAFETY.md  vendor_build_prompt.md
export/: exporters.py
export/fonts/: README.txt
localization/: strings_es.yaml
m1/: __init__.py  config.py  schemas.py
m1/api/: __init__.py  main.py  models.py
m1/asr/: __init__.py  service.py  transcriber.py
m1/chips/: __init__.py  service.py
m1/composer/: service.py
m1/defaults/: __init__.py  config.yaml
m1/evidence/: __init__.py  cache.py  sqlite_cache.py
m1/export/: __init__.py  exporter.py  markdown.py
m1/extractor/: __init__.py  llm.py  service.py
m1/fhir/: __init__.py  reader.py  slice.py
m1/guards/: __init__.py  service.py
m1/metrics/: state.py
m1/planpack/: __init__.py
m1/planpacks/: chest_pain.yaml  chest_pain_low_intermediate.yaml  loader.py  seizure.yaml  seizure_initial.yaml  sepsis.yaml  sepsis_initial.yaml
m1/scripts/: __init__.py  ingest.py
m1/templates/: discharge.md.j2  discharge.md.jinja  discharge_en.j2  discharge_es.j2  handoff.md.j2  handoff_ipass.j2  note.j2  note.md.j2
m1/ui/: app.py
scripts/: init_db.py  perf_harness.py  sbom_cyclondex.py  wer_harness.py
scripts/windows/: make_installer.ps1
tests/: test_chips.py  test_chips_bands.py  test_compose_note.py  test_composer.py  test_config.py  test_config_loader.py  test_evidence_cache.py  test_evidence_deltas.py  test_export.py  test_extract_visitjson.py  test_extractor.py  test_fhir_slice_contract.py  test_guard_resolver.py  test_guards.py  test_planpacks.py  test_schemas.py  test_scoring.py  test_ui.py
tests/fixture/: sample_facts.josn  sample_visitjson.json
ui/: __init__.py  app.py
ui/assets/: styles.qss
ui/widgets/: chips_rail.py  evidence_popover.py  lock_screen.py  panel.py  transcript_view.py
