[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minuteone"
version = "0.1.0"
description = "MinuteOne (M1) edge-first clinical assistant"
authors = [{name = "MinuteOne Team"}]
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "strict"
