[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minuteone"
version = "0.1.0"
description = "MinuteOne (M1) edge-first clinical assistant"
authors = [{name = "MinuteOne Team"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "fastapi>=0.111,<0.112",
    "uvicorn[standard]>=0.30,<0.31",
    "jinja2>=3.1,<4.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "aiosqlite>=0.20,<0.21",
    "sqlalchemy>=2.0,<2.1",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "pyqt5>=5.15,<6.0",
    "httpx>=0.27,<0.28",
    "rich>=13.7,<14.0",
    "llama-cpp-python>=0.2,<0.3",
    "faster-whisper>=1.0,<1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.23,<0.24",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"m1" = [
    "defaults/config.yaml",
    "templates/*.jinja",
    "templates/*.j2",
    "planpacks/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "strict"
